# openclaw-voice

./: .env.example  .gitignore  .releaserc.json  CLAUDE.md  LICENSE  MANIFEST.md  README.md  config.example.toml  conftest.py  corrections.example.toml  pyproject.toml  voice_state.json
.github/workflows/: ci.yml  release.yml
configs/: config.example.toml
docs/: architecture.md  speaker-enrollment.md
docs/adrs/: ADR-001-wyoming-protocol.md  ADR-002-resemblyzer-speaker-id.md
docs/plans/: discord-voice-bot.md  plugin-packaging.md
plugin/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json
scripts/: test_pipeline.sh  update-channel-summaries.py
src/openclaw_voice/: __init__.py  cli.py  conversation_log.py  discord_bot.py  escalation_http.py  gateway_client.py  logging_config.py  speaker_id.py  stt_bridge.py  test_endpoints.py  tools.py  tts_bridge.py  tts_normalizer.py  vad.py  voice_pipeline.py  voice_session.py
src/openclaw_voice/facades/: __init__.py  kokoro.py  resemblyzer.py  whisper.py
tests/: test_discord_bot.py  test_e2e.py  test_e2e_discord.py  test_e2e_discord_live.py  test_speaker_id.py  test_stt_bridge.py  test_tts_bridge.py  test_tts_normalizer.py  test_vad.py  test_voice_pipeline.py
